# ezpyp

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  step.done
.github/workflows/: dev.yaml  static.yaml  test.yaml
examples/simple/: simple_pipeline.py
src/ezpyp/: __init__.py  cache.py  mpi.py  pipe.py  steps.py  utils.py
tests/units/: conftest.py  test_dependency_chains.py  test_mpi_utils.py  test_pipe.py  test_pipeline_steps.py  test_pipelines.py
